--- a/text2wec.ipynb
+++ b/text2wec.ipynb
@@ -1336,9 +1336,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-31 07:14:45.337332: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-08-31 08:34:34.083338: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-08-31 07:14:47.026407: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-08-31 08:34:35.897141: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -2766,7 +2766,7 @@
     {
      "data": {
       "text/plain": [
-       "['real', 'fake']"
+       "['fake', 'real']"
       ]
      },
      "execution_count": 28,
@@ -2788,7 +2788,7 @@
     {
      "data": {
       "text/plain": [
-       "{'real': 1, 'fake': 2}"
+       "{'fake': 1, 'real': 2}"
       ]
      },
      "execution_count": 29,
@@ -2810,7 +2810,7 @@
     {
      "data": {
       "text/plain": [
-       "[[2], [2]]"
+       "[[1], [1]]"
       ]
      },
      "execution_count": 30,
@@ -2988,7 +2988,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gensim.models import Word2Vec"
+    "from gensim.models import Word2Vec,KeyedVectors\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -3013,7 +3014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "6640a821-99a6-4046-ae1d-28862be1000b",
    "metadata": {},
    "outputs": [],
@@ -3023,27 +3024,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "49041b24-19ea-4515-91ca-9450302e56cb",
+   "execution_count": 43,
+   "id": "bda83ec1-e2d1-4416-9411-d7b0e4f8b520",
    "metadata": {},
    "outputs": [],
    "source": [
-    "w2v_model.save('w2v_model_gensim.bin')"
+    "w2v_model.wv.save_word2vec_format('gensim_w2v_model.bin',binary=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b09b06c4-6c21-40f7-bd7e-cdda114ff65a",
+   "execution_count": 44,
+   "id": "334209e1-6a70-4a08-9423-d306c6746106",
    "metadata": {},
    "outputs": [],
    "source": [
-    "w2v_model"
+    "trained_model= KeyedVectors.load_word2vec_format('gensim_w2v_model.bin', binary=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "id": "afea93b8-857d-424d-a6ca-1811fde22571",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.keyedvectors.KeyedVectors at 0x7fd4f0332850>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trained_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "6857c3f2-e630-4cb6-8210-c3264e4da694",
    "metadata": {},
    "outputs": [],
@@ -3053,17 +3075,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "b9551873-68f3-4cc5-9a9b-c46e01fd4347",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.word2vec.Word2Vec at 0x7fd546e5bf10>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "43a067cc-5d5b-4827-a969-eaa33e0ff2f6",
    "metadata": {},
    "outputs": [],
@@ -3077,20 +3110,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "90897c57-2a0f-498f-a99a-cea3b111d1ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-0.07793037, -0.16875699,  0.30390945, ...,  0.14121009,\n",
+       "        -0.17042878,  0.16333361],\n",
+       "       [ 0.02910812,  0.02080025,  0.34287935, ...,  0.32883072,\n",
+       "        -0.08093225,  0.10833721],\n",
+       "       ...,\n",
+       "       [ 0.92098463, -1.47393405,  0.37637711, ..., -0.23623398,\n",
+       "        -0.23869252,  0.50083262],\n",
+       "       [ 0.82044089, -0.10777424,  0.61989725, ...,  1.43224561,\n",
+       "         0.0888591 , -0.50418532],\n",
+       "       [ 0.21204326,  0.02509745,  0.18030617, ...,  1.31491435,\n",
+       "         0.4436453 , -0.17231117]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "embeding_mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "bb1ba8fd-fbfb-40ca-b5b5-aca14848dd3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-0.07793037, -0.16875699,  0.30390945,  0.25067386, -0.05882036,\n",
+       "        -0.15118061,  0.16743134, -0.03106559,  0.23049152, -0.06565776,\n",
+       "        -0.0521047 ,  0.21857333,  0.01478827,  0.05424716, -0.06323519,\n",
+       "         0.01884124,  0.01287606,  0.0931844 , -0.3370367 ,  0.14944354,\n",
+       "         0.07547306, -0.26847818, -0.14339532,  0.09648823, -0.32613197,\n",
+       "         0.12151004, -0.10004096,  0.23497458, -0.19551899, -0.3498215 ,\n",
+       "        -0.29075885,  0.55387133,  0.24026966, -0.04309618, -0.12548997,\n",
+       "        -0.02246659,  0.03449148,  0.1045943 ,  0.20633332, -0.02430538,\n",
+       "         0.02125509,  0.11784013,  0.06797988, -0.043377  ,  0.11357921,\n",
+       "        -0.26177356, -0.02013176, -0.14339206,  0.19108458,  0.22852695,\n",
+       "        -0.09264139, -0.1591135 ,  0.11723429,  0.09401152,  0.30419055,\n",
+       "        -0.15795834, -0.17394002, -0.17677903, -0.22122349,  0.41320428,\n",
+       "         0.05073204,  0.29840723, -0.287731  ,  0.08940427,  0.55668896,\n",
+       "        -0.1305893 , -0.03092697, -0.03946843, -0.16732933,  0.18645842,\n",
+       "         0.09887712,  0.1672104 , -0.10892153, -0.1052111 ,  0.25434038,\n",
+       "        -0.23453183,  0.06186968,  0.04906823,  0.07938962, -0.09411517,\n",
+       "        -0.28719535, -0.14620246, -0.08231465, -0.42275822,  0.04896064,\n",
+       "         0.35134062,  0.22611296,  0.11815761, -0.14664719, -0.03102198,\n",
+       "        -0.02270213,  0.03166989, -0.10220758,  0.28966904, -0.17584586,\n",
+       "         0.28304252,  0.04646029, -0.25801972, -0.12784672, -0.02414556,\n",
+       "        -0.12477357, -0.31296423,  0.00706625, -0.29153135, -0.10190073,\n",
+       "         0.08259507,  0.005817  ,  0.07879239, -0.09419308, -0.07163022,\n",
+       "        -0.12695473, -0.1571831 ,  0.00562887,  0.10087259, -0.58448654,\n",
+       "         0.28279594,  0.06828774,  0.14210795,  0.12449369, -0.18039203,\n",
+       "         0.26378796,  0.23411776, -0.02147776, -0.01766866, -0.08901627,\n",
+       "         0.1412101 , -0.17042878,  0.16333361], dtype=float32),\n",
+       " array([ 2.91081220e-02,  2.08002459e-02,  3.42879355e-01,  4.52817738e-01,\n",
+       "        -1.64951846e-01, -4.28696387e-02,  2.20357597e-01,  1.71868913e-02,\n",
+       "         5.34621418e-01,  2.46361673e-01, -1.16081543e-01,  4.86197770e-02,\n",
+       "        -1.11007147e-01, -2.94141561e-01, -2.42264822e-01,  2.55185336e-01,\n",
+       "        -2.59269830e-02,  3.34343433e-01, -4.29232508e-01,  3.26188654e-01,\n",
+       "        -1.31166503e-01,  6.11193068e-02, -3.53508472e-01,  3.01598385e-02,\n",
+       "        -5.59127450e-01, -6.57424852e-02,  1.01694621e-01,  2.82604277e-01,\n",
+       "        -1.66307002e-01, -2.71049649e-01,  1.27013735e-02,  1.23008966e-01,\n",
+       "        -1.55289859e-01, -1.03546232e-01, -1.41482040e-01, -1.30122658e-02,\n",
+       "        -3.40145528e-02,  9.57110822e-02,  1.28237382e-01,  2.56171107e-01,\n",
+       "        -7.99235106e-02,  6.13558471e-01,  1.30385578e-01,  8.14549401e-02,\n",
+       "        -2.24116325e-01,  3.14666629e-01,  1.56610399e-01, -3.47790986e-01,\n",
+       "         3.90053391e-01,  4.35056329e-01,  2.78379470e-01,  1.26778066e-01,\n",
+       "         1.20764293e-01,  2.28883132e-01, -9.66464132e-02, -3.12647194e-01,\n",
+       "        -2.00799942e-01,  1.92113981e-01, -6.75844729e-01,  3.59684169e-01,\n",
+       "        -3.40580970e-01, -1.21517383e-01,  7.14406231e-03, -1.27929330e-01,\n",
+       "         5.64168215e-01, -8.73043239e-02,  5.61771868e-03, -3.61505023e-04,\n",
+       "         6.12810738e-02, -2.25595042e-01,  9.63782817e-02,  2.59083182e-01,\n",
+       "         2.73334354e-01, -2.71136343e-01,  5.33129752e-01, -9.52790231e-02,\n",
+       "         6.03639856e-02, -9.36908424e-02, -3.58170390e-01, -2.32128814e-01,\n",
+       "        -3.53397369e-01,  1.04736865e-01, -1.66841447e-01, -4.33852464e-01,\n",
+       "         1.59697860e-01,  1.20353766e-01,  7.11396784e-02,  3.30838710e-01,\n",
+       "        -6.11138456e-02, -6.41591847e-02,  1.32998630e-01,  1.56516120e-01,\n",
+       "        -2.79038072e-01,  3.24271172e-01, -5.71567304e-02,  1.17817238e-01,\n",
+       "         2.11618334e-01, -3.46666545e-01,  1.85025986e-02, -2.29629241e-02,\n",
+       "        -3.01352412e-01, -1.16577826e-01, -2.08985239e-01, -4.48773026e-01,\n",
+       "        -3.67072485e-02, -1.39946282e-01,  2.10002273e-01,  1.09272517e-01,\n",
+       "        -3.98265896e-03,  3.49410713e-01, -1.74096704e-01,  1.10178530e-01,\n",
+       "         1.57410309e-01, -6.39473721e-02, -4.96540517e-01,  3.14478815e-01,\n",
+       "        -2.15534076e-01,  1.82691973e-03, -4.15969715e-02,  3.32482338e-01,\n",
+       "         2.94059306e-01, -1.36201680e-01,  1.57602709e-02, -2.61771437e-02,\n",
+       "        -2.43336380e-01,  3.28830719e-01, -8.09322521e-02,  1.08337209e-01],\n",
+       "       dtype=float32)]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "texts =list(model.wv.vectors)\n",
     "texts[:2]"
@@ -3098,8 +3223,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "186e8cbf-a765-48c2-8609-19814bf851b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import multiprocessing\n",
+    "cores=multiprocessing.cpu_count()\n",
+    "cores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4e466f41-a460-44a1-bc9d-b4ae01b006d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('ทุกร', 0.5638706684112549), ('กรรมวิธีการผลิต', 0.526760995388031), ('มรณ์', 0.5167566537857056)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ms = model.wv.most_similar(positive=['คำแนะนำ'], topn=3)\n",
+    "print(ms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "863a5b73-0fc4-4514-8369-013ffd3c05c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a45f4c2-9801-4c28-9fa9-cfe3285cdbd4",
    "metadata": {},
    "outputs": [],
    "source": []
